# rdtsc

./: CMakeLists.txt  LICENSE  README.md
include/: rdtsc.h
lib/: rdtsc.c  rdtscp.c
src/: main.c
